sandbox/Raylib_natchuz/src/src/raylib.h

    typedef enum bool { false = 0, true = !false } bool;
typedef struct Vector3 {
    float x;                
    float y;                
    float z;                
} Vector3;
typedef Vector4 Quaternion;
typedef struct Matrix {
    float m0, m4, m8, m12;  
    float m1, m5, m9, m13;  
    float m2, m6, m10, m14; 
    float m3, m7, m11, m15; 
} Matrix;
typedef struct Mesh {
    int vertexCount;        
    int triangleCount;      
    float *vertices;        
    float *texcoords;       
    float *texcoords2;      
    float *normals;         
    float *tangents;        
    unsigned char *colors;      
    unsigned short *indices;    
    float *animVertices;    
    float *animNormals;     
    unsigned char *boneIds; 
    float *boneWeights;     
    unsigned int vaoId;     
    unsigned int *vboId;    
} Mesh;
typedef struct Shader {
    unsigned int id;        
    int *locs;              
} Shader;
typedef struct MaterialMap {
    Texture2D texture;      
    Color color;            
    float value;            
} MaterialMap;
typedef struct Material {
    Shader shader;          
    MaterialMap *maps;      
    float params[4];        
} Material;
typedef struct Transform {
    Vector3 translation;    
    Quaternion rotation;    
    Vector3 scale;          
} Transform;
typedef struct BoneInfo {
    char name[32];          
    int parent;             
} BoneInfo;
typedef struct Model {
    Matrix transform;       
    int meshCount;          
    int materialCount;      
    Mesh *meshes;           
    Material *materials;    
    int *meshMaterial;      
    int boneCount;          
    BoneInfo *bones;        
    Transform *bindPose;    
} Model;
typedef struct ModelAnimation {
    int boneCount;          
    int frameCount;         
    BoneInfo *bones;        
    Transform **framePoses; 
} ModelAnimation;
typedef struct Ray {
    Vector3 position;       
    Vector3 direction;      
} Ray;
typedef struct RayCollision {
    bool hit;               
    float distance;         
    Vector3 point;          
    Vector3 normal;         
} RayCollision;
typedef struct BoundingBox {
    Vector3 min;            
    Vector3 max;            
} BoundingBox;
typedef struct Wave {
    unsigned int frameCount;    
    unsigned int sampleRate;    
    unsigned int sampleSize;    
    unsigned int channels;      
    void *data;                 
} Wave;
typedef struct rAudioBuffer rAudioBuffer;
typedef struct rAudioProcessor rAudioProcessor;
typedef struct AudioStream {
    rAudioBuffer *buffer;       
    rAudioProcessor *processor; 
    unsigned int sampleRate;    
    unsigned int sampleSize;    
    unsigned int channels;      
} AudioStream;
typedef struct Sound {
    AudioStream stream;         
    unsigned int frameCount;    
} Sound;
typedef struct Music {
    AudioStream stream;         
    unsigned int frameCount;    
    bool looping;               
    int ctxType;                
    void *ctxData;              
} Music;
typedef struct VrDeviceInfo {
    int hResolution;                
    int vResolution;                
    float hScreenSize;              
    float vScreenSize;              
    float vScreenCenter;            
    float eyeToScreenDistance;      
    float lensSeparationDistance;   
    float interpupillaryDistance;   
    float lensDistortionValues[4];  
    float chromaAbCorrection[4];    
} VrDeviceInfo;
typedef struct VrStereoConfig {
    Matrix projection[2];           
    Matrix viewOffset[2];           
    float leftLensCenter[2];        
    float rightLensCenter[2];       
    float leftScreenCenter[2];      
    float rightScreenCenter[2];     
    float scale[2];                 
    float scaleIn[2];               
} VrStereoConfig;
typedef struct FilePathList {
    unsigned int capacity;          
    unsigned int count;             
    char **paths;                   
} FilePathList;
typedef enum {
    FLAG_VSYNC_HINT         = 0x00000040,   
    FLAG_FULLSCREEN_MODE    = 0x00000002,   
    FLAG_WINDOW_RESIZABLE   = 0x00000004,   
    FLAG_WINDOW_UNDECORATED = 0x00000008,   
    FLAG_WINDOW_HIDDEN      = 0x00000080,   
    FLAG_WINDOW_MINIMIZED   = 0x00000200,   
    FLAG_WINDOW_MAXIMIZED   = 0x00000400,   
    FLAG_WINDOW_UNFOCUSED   = 0x00000800,   
    FLAG_WINDOW_TOPMOST     = 0x00001000,   
    FLAG_WINDOW_ALWAYS_RUN  = 0x00000100,   
    FLAG_WINDOW_TRANSPARENT = 0x00000010,   
    FLAG_WINDOW_HIGHDPI     = 0x00002000,   
    FLAG_WINDOW_MOUSE_PASSTHROUGH = 0x00004000, 
    FLAG_MSAA_4X_HINT       = 0x00000020,   
    FLAG_INTERLACED_HINT    = 0x00010000    
} ConfigFlags;
typedef enum {
    LOG_ALL = 0,        
    LOG_TRACE,          
    LOG_DEBUG,          
    LOG_INFO,           
    LOG_WARNING,        
    LOG_ERROR,          
    LOG_FATAL,          
    LOG_NONE            
} TraceLogLevel;
typedef enum {
    KEY_NULL            = 0,        
    KEY_APOSTROPHE      = 39,       
    KEY_COMMA           = 44,       
    KEY_MINUS           = 45,       
    KEY_PERIOD          = 46,       
    KEY_SLASH           = 47,       
    KEY_ZERO            = 48,       
    KEY_ONE             = 49,       
    KEY_TWO             = 50,       
    KEY_THREE           = 51,       
    KEY_FOUR            = 52,       
    KEY_FIVE            = 53,       
    KEY_SIX             = 54,       
    KEY_SEVEN           = 55,       
    KEY_EIGHT           = 56,       
    KEY_NINE            = 57,       
    KEY_SEMICOLON       = 59,       
    KEY_EQUAL           = 61,       
    KEY_A               = 65,       
    KEY_B               = 66,       
    KEY_C               = 67,       
    KEY_D               = 68,       
    KEY_E               = 69,       
    KEY_F               = 70,       
    KEY_G               = 71,       
    KEY_H               = 72,       
    KEY_I               = 73,       
    KEY_J               = 74,       
    KEY_K               = 75,       
    KEY_L               = 76,       
    KEY_M               = 77,       
    KEY_N               = 78,       
    KEY_O               = 79,       
    KEY_P               = 80,       
    KEY_Q               = 81,       
    KEY_R               = 82,       
    KEY_S               = 83,       
    KEY_T               = 84,       
    KEY_U               = 85,       
    KEY_V               = 86,       
    KEY_W               = 87,       
    KEY_X               = 88,       
    KEY_Y               = 89,       
    KEY_Z               = 90,       
    KEY_LEFT_BRACKET    = 91,       
    KEY_BACKSLASH       = 92,       
    KEY_RIGHT_BRACKET   = 93,       
    KEY_GRAVE           = 96,       
    KEY_SPACE           = 32,       
    KEY_ESCAPE          = 256,      
    KEY_ENTER           = 257,      
    KEY_TAB             = 258,      
    KEY_BACKSPACE       = 259,      
    KEY_INSERT          = 260,      
    KEY_DELETE          = 261,      
    KEY_RIGHT           = 262,      
    KEY_LEFT            = 263,      
    KEY_DOWN            = 264,      
    KEY_UP              = 265,      
    KEY_PAGE_UP         = 266,      
    KEY_PAGE_DOWN       = 267,      
    KEY_HOME            = 268,      
    KEY_END             = 269,      
    KEY_CAPS_LOCK       = 280,      
    KEY_SCROLL_LOCK     = 281,      
    KEY_NUM_LOCK        = 282,      
    KEY_PRINT_SCREEN    = 283,      
    KEY_PAUSE           = 284,      
    KEY_F1              = 290,      
    KEY_F2              = 291,      
    KEY_F3              = 292,      
    KEY_F4              = 293,      
    KEY_F5              = 294,      
    KEY_F6              = 295,      
    KEY_F7              = 296,      
    KEY_F8              = 297,      
    KEY_F9              = 298,      
    KEY_F10             = 299,      
    KEY_F11             = 300,      
    KEY_F12             = 301,      
    KEY_LEFT_SHIFT      = 340,      
    KEY_LEFT_CONTROL    = 341,      
    KEY_LEFT_ALT        = 342,      
    KEY_LEFT_SUPER      = 343,      
    KEY_RIGHT_SHIFT     = 344,      
    KEY_RIGHT_CONTROL   = 345,      
    KEY_RIGHT_ALT       = 346,      
    KEY_RIGHT_SUPER     = 347,      
    KEY_KB_MENU         = 348,      
    KEY_KP_0            = 320,      
    KEY_KP_1            = 321,      
    KEY_KP_2            = 322,      
    KEY_KP_3            = 323,      
    KEY_KP_4            = 324,      
    KEY_KP_5            = 325,      
    KEY_KP_6            = 326,      
    KEY_KP_7            = 327,      
    KEY_KP_8            = 328,      
    KEY_KP_9            = 329,      
    KEY_KP_DECIMAL      = 330,      
    KEY_KP_DIVIDE       = 331,      
    KEY_KP_MULTIPLY     = 332,      
    KEY_KP_SUBTRACT     = 333,      
    KEY_KP_ADD          = 334,      
    KEY_KP_ENTER        = 335,      
    KEY_KP_EQUAL        = 336,      
    KEY_BACK            = 4,        
    KEY_MENU            = 82,       
    KEY_VOLUME_UP       = 24,       
    KEY_VOLUME_DOWN     = 25        
} KeyboardKey;
RLAPI int GetKeyPressed(void);                                