Raylib/raylib.jai


// Model, meshes, materials and animation data
Model :: struct {
	transform:     Matrix; // Local transform matrix

	meshCount:     s32; // Number of meshes
	materialCount: s32; // Number of materials
	meshes:        *Mesh; // Meshes array
	materials:     *Material; // Materials array
	meshMaterial:  *s32; // Mesh material number

	boneCount:     s32; // Number of bones
	bones:         *BoneInfo; // Bones information (skeleton)
	bindPose:      *Transform; // Bones base transformation (pose)
}

// ModelAnimation
ModelAnimation :: struct {
	boneCount:  s32; // Number of bones
	frameCount: s32; // Number of animation frames
	bones:      *BoneInfo; // Bones information (skeleton)
	framePoses: **Transform; // Poses array by frame
}

// Ray, ray for raycasting
Ray :: struct {
	position:  Vector3; // Ray position (origin)
	direction: Vector3; // Ray direction
}

// RayCollision, ray hit information
RayCollision :: struct {
	hit:      bool; // Did the ray hit something?
	distance: float; // Distance to the nearest hit
	point:    Vector3; // Point of the nearest hit
	normal:   Vector3; // Surface normal of hit
}

// BoundingBox
BoundingBox :: struct {
	min: Vector3; // Minimum vertex box-corner
	max: Vector3; // Maximum vertex box-corner
}

// Wave, audio wave data
Wave :: struct {
	frameCount: u32; // Total number of frames (considering channels)
	sampleRate: u32; // Frequency (samples per second)
	sampleSize: u32; // Bit depth (bits per sample): 8, 16, 32 (24 not supported)
	channels:   u32; // Number of channels (1-mono, 2-stereo, ...)
	data:       *void; // Buffer data pointer
}

rAudioBuffer :: struct {}
rAudioProcessor :: struct {}

// AudioStream, custom audio stream
AudioStream :: struct {
	buffer:     *rAudioBuffer; // Pointer to internal data used by the audio system
	processor:  *rAudioProcessor; // Pointer to internal data processor, useful for audio effects

	sampleRate: u32; // Frequency (samples per second)
	sampleSize: u32; // Bit depth (bits per sample): 8, 16, 32 (24 not supported)
	channels:   u32; // Number of channels (1-mono, 2-stereo, ...)
}

// Sound
Sound :: struct {
	stream:     AudioStream; // Audio stream
	frameCount: u32; // Total number of frames (considering channels)
}

// Music, audio stream, anything longer than ~10 seconds should be streamed
Music :: struct {
	stream:     AudioStream; // Audio stream
	frameCount: u32; // Total number of frames (considering channels)
	looping:    bool; // Music looping enable

	ctxType:    s32; // Type of music context (audio filetype)
	ctxData:    *void; // Audio context data, depends on type
}

// VrDeviceInfo, Head-Mounted-Display device parameters
VrDeviceInfo :: struct {
	hResolution:            s32; // Horizontal resolution in pixels
	vResolution:            s32; // Vertical resolution in pixels
	hScreenSize:            float; // Horizontal size in meters
	vScreenSize:            float; // Vertical size in meters
	vScreenCenter:          float; // Screen center in meters
	eyeToScreenDistance:    float; // Distance between eye and display in meters
	lensSeparationDistance: float; // Lens separation distance in meters
	interpupillaryDistance: float; // IPD (distance between pupils) in meters
	lensDistortionValues:   [4] float; // Lens distortion constant parameters
	chromaAbCorrection:     [4] float; // Chromatic aberration correction parameters
}

// VrStereoConfig, VR stereo rendering configuration for simulator
VrStereoConfig :: struct {
	projection:        [2] Matrix; // VR projection matrices (per eye)
	viewOffset:        [2] Matrix; // VR view offset matrices (per eye)
	leftLensCenter:    [2] float; // VR left lens center
	rightLensCenter:   [2] float; // VR right lens center
	leftScreenCenter:  [2] float; // VR left screen center
	rightScreenCenter: [2] float; // VR right screen center
	scale:             [2] float; // VR distortion scale
	scaleIn:           [2] float; // VR distortion scale in
}

// File path list
FilePathList :: struct {
	capacity: u32; // Filepaths max entries
	count:    u32; // Filepaths entries count
	paths:    **u8; // Filepaths entries
}

//----------------------------------------------------------------------------------
// Enumerators Definition
//----------------------------------------------------------------------------------
// System/Window config flags
// NOTE: Every bit registers one state (use it with bit masks)
// By default all flags are set to 0
ConfigFlags :: enum s32 {
	VSYNC_HINT               :: 64;
	FULLSCREEN_MODE          :: 2;
	WINDOW_RESIZABLE         :: 4;
	WINDOW_UNDECORATED       :: 8;
	WINDOW_HIDDEN            :: 128;
	WINDOW_MINIMIZED         :: 512;
	WINDOW_MAXIMIZED         :: 1024;
	WINDOW_UNFOCUSED         :: 2048;
	WINDOW_TOPMOST           :: 4096;
	WINDOW_ALWAYS_RUN        :: 256;
	WINDOW_TRANSPARENT       :: 16;
	WINDOW_HIGHDPI           :: 8192;
	WINDOW_MOUSE_PASSTHROUGH :: 16384;
	MSAA_4X_HINT             :: 32;
	INTERLACED_HINT          :: 65536;
}
FLAG_VSYNC_HINT               :: ConfigFlags.VSYNC_HINT;
FLAG_FULLSCREEN_MODE          :: ConfigFlags.FULLSCREEN_MODE;
FLAG_WINDOW_RESIZABLE         :: ConfigFlags.WINDOW_RESIZABLE;
FLAG_WINDOW_UNDECORATED       :: ConfigFlags.WINDOW_UNDECORATED;
FLAG_WINDOW_HIDDEN            :: ConfigFlags.WINDOW_HIDDEN;
FLAG_WINDOW_MINIMIZED         :: ConfigFlags.WINDOW_MINIMIZED;
FLAG_WINDOW_MAXIMIZED         :: ConfigFlags.WINDOW_MAXIMIZED;
FLAG_WINDOW_UNFOCUSED         :: ConfigFlags.WINDOW_UNFOCUSED;
FLAG_WINDOW_TOPMOST           :: ConfigFlags.WINDOW_TOPMOST;
FLAG_WINDOW_ALWAYS_RUN        :: ConfigFlags.WINDOW_ALWAYS_RUN;
FLAG_WINDOW_TRANSPARENT       :: ConfigFlags.WINDOW_TRANSPARENT;
FLAG_WINDOW_HIGHDPI           :: ConfigFlags.WINDOW_HIGHDPI;
FLAG_WINDOW_MOUSE_PASSTHROUGH :: ConfigFlags.WINDOW_MOUSE_PASSTHROUGH;
FLAG_MSAA_4X_HINT             :: ConfigFlags.MSAA_4X_HINT;
FLAG_INTERLACED_HINT          :: ConfigFlags.INTERLACED_HINT;

// Trace log level
// NOTE: Organized by priority level
TraceLogLevel :: enum s32 {
    ALL     :: 0;
    TRACE   :: 1;
    DEBUG   :: 2;
    INFO    :: 3;
    WARNING :: 4;
    ERROR   :: 5;
    FATAL   :: 6;
    NONE    :: 7;
}
LOG_ALL     :: TraceLogLevel.ALL;
LOG_TRACE   :: TraceLogLevel.TRACE;
LOG_DEBUG   :: TraceLogLevel.DEBUG;
LOG_INFO    :: TraceLogLevel.INFO;
LOG_WARNING :: TraceLogLevel.WARNING;
LOG_ERROR   :: TraceLogLevel.ERROR;
LOG_FATAL   :: TraceLogLevel.FATAL;
LOG_NONE    :: TraceLogLevel.NONE;

// Keyboard keys (US keyboard layout)
// NOTE: Use GetKeyPressed() to allow redefining
// required keys for alternative layouts
KeyboardKey :: enum s32 {
    NULL          :: 0;

    APOSTROPHE    :: 39;
    COMMA         :: 44;
    MINUS         :: 45;
    PERIOD        :: 46;
    SLASH         :: 47;
    ZERO          :: 48;
    ONE           :: 49;
    TWO           :: 50;
    THREE         :: 51;
    FOUR          :: 52;
    FIVE          :: 53;
    SIX           :: 54;
    SEVEN         :: 55;
    EIGHT         :: 56;
    NINE          :: 57;
    SEMICOLON     :: 59;
    EQUAL         :: 61;
    A             :: 65;
    B             :: 66;
    C             :: 67;
    D             :: 68;
    E             :: 69;
    F             :: 70;
    G             :: 71;
    H             :: 72;
    I             :: 73;
    J             :: 74;
    K             :: 75;
    L             :: 76;
    M             :: 77;
    N             :: 78;
    O             :: 79;
    P             :: 80;
    Q             :: 81;
    R             :: 82;
    S             :: 83;
    T             :: 84;
    U             :: 85;
    V             :: 86;
    W             :: 87;
    X             :: 88;
    Y             :: 89;
    Z             :: 90;
    LEFT_BRACKET  :: 91;
    BACKSLASH     :: 92;
    RIGHT_BRACKET :: 93;
    GRAVE         :: 96;

    SPACE         :: 32;
    ESCAPE        :: 256;
    ENTER         :: 257;
    TAB           :: 258;
    BACKSPACE     :: 259;
    INSERT        :: 260;
    DELETE        :: 261;
    RIGHT         :: 262;
    LEFT          :: 263;
    DOWN          :: 264;
    UP            :: 265;
    PAGE_UP       :: 266;
    PAGE_DOWN     :: 267;
    HOME          :: 268;
    END           :: 269;
    CAPS_LOCK     :: 280;
    SCROLL_LOCK   :: 281;
    NUM_LOCK      :: 282;
    PRINT_SCREEN  :: 283;
    PAUSE         :: 284;
    F1            :: 290;
    F2            :: 291;
    F3            :: 292;
    F4            :: 293;
    F5            :: 294;
    F6            :: 295;
    F7            :: 296;
    F8            :: 297;
    F9            :: 298;
    F10           :: 299;
    F11           :: 300;
    F12           :: 301;
    LEFT_SHIFT    :: 340;
    LEFT_CONTROL  :: 341;
    LEFT_ALT      :: 342;
    LEFT_SUPER    :: 343;
    RIGHT_SHIFT   :: 344;
    RIGHT_CONTROL :: 345;
    RIGHT_ALT     :: 346;
    RIGHT_SUPER   :: 347;
    KB_MENU       :: 348;

    KP_0          :: 320;
    KP_1          :: 321;
    KP_2          :: 322;
    KP_3          :: 323;
    KP_4          :: 324;
    KP_5          :: 325;
    KP_6          :: 326;
    KP_7          :: 327;
    KP_8          :: 328;
    KP_9          :: 329;
    KP_DECIMAL    :: 330;
    KP_DIVIDE     :: 331;
    KP_MULTIPLY   :: 332;
    KP_SUBTRACT   :: 333;
    KP_ADD        :: 334;
    KP_ENTER      :: 335;
    KP_EQUAL      :: 336;

    BACK          :: 4;
    MENU          :: 82;
    VOLUME_UP     :: 24;
    VOLUME_DOWN   :: 25;
}

KEY_NULL          :: KeyboardKey.NULL;

KEY_APOSTROPHE    :: KeyboardKey.APOSTROPHE;
KEY_COMMA         :: KeyboardKey.COMMA;
KEY_MINUS         :: KeyboardKey.MINUS;
KEY_PERIOD        :: KeyboardKey.PERIOD;
KEY_SLASH         :: KeyboardKey.SLASH;
KEY_ZERO          :: KeyboardKey.ZERO;
KEY_ONE           :: KeyboardKey.ONE;
KEY_TWO           :: KeyboardKey.TWO;
KEY_THREE         :: KeyboardKey.THREE;
KEY_FOUR          :: KeyboardKey.FOUR;
KEY_FIVE          :: KeyboardKey.FIVE;
KEY_SIX           :: KeyboardKey.SIX;
KEY_SEVEN         :: KeyboardKey.SEVEN;
KEY_EIGHT         :: KeyboardKey.EIGHT;
KEY_NINE          :: KeyboardKey.NINE;
KEY_SEMICOLON     :: KeyboardKey.SEMICOLON;
KEY_EQUAL         :: KeyboardKey.EQUAL;
KEY_A             :: KeyboardKey.A;
KEY_B             :: KeyboardKey.B;
KEY_C             :: KeyboardKey.C;
KEY_D             :: KeyboardKey.D;
KEY_E             :: KeyboardKey.E;
KEY_F             :: KeyboardKey.F;
KEY_G             :: KeyboardKey.G;
KEY_H             :: KeyboardKey.H;
KEY_I             :: KeyboardKey.I;
KEY_J             :: KeyboardKey.J;
KEY_K             :: KeyboardKey.K;
KEY_L             :: KeyboardKey.L;
KEY_M             :: KeyboardKey.M;
KEY_N             :: KeyboardKey.N;
KEY_O             :: KeyboardKey.O;
KEY_P             :: KeyboardKey.P;
KEY_Q             :: KeyboardKey.Q;
KEY_R             :: KeyboardKey.R;
KEY_S             :: KeyboardKey.S;
KEY_T             :: KeyboardKey.T;
KEY_U             :: KeyboardKey.U;
KEY_V             :: KeyboardKey.V;
KEY_W             :: KeyboardKey.W;
KEY_X             :: KeyboardKey.X;
KEY_Y             :: KeyboardKey.Y;
KEY_Z             :: KeyboardKey.Z;
KEY_LEFT_BRACKET  :: KeyboardKey.LEFT_BRACKET;
KEY_BACKSLASH     :: KeyboardKey.BACKSLASH;
KEY_RIGHT_BRACKET :: KeyboardKey.RIGHT_BRACKET;
KEY_GRAVE         :: KeyboardKey.GRAVE;
